<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#E8F5E9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAboutAppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/ivPreview"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/image_preview"
            android:scaleType="centerCrop"
            android:src="@drawable/healthy_environment" />

        <TextView
            android:id="@+id/tvAboutAppContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_description"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp" />
    </LinearLayout>
</ScrollView>
