<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#E8F5E9"
    tools:context=".ui.classification.WasteClassificationActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/klasifikasi_sampah"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp" />

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image_preview"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/btnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/ivPreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCapture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:text="@string/kamera"
            app:iconGravity="textStart"
            android:backgroundTint="@color/light_green"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/galeri"
            app:iconGravity="textStart"
            android:backgroundTint="@color/light_green"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPredict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lihat_prediksi_harga"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/light_green"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

