<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#E8F5E9"
    tools:context=".ui.classification.WasteClassificationFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/klasifikasi_sampah"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp" />

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/image_preview"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_image"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCapture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kamera"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/ivPreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/light_green"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/galeri"
        app:iconGravity="textStart"
        app:layout_constraintTop_toBottomOf="@id/btnCapture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/light_green"/>

</androidx.constraintlayout.widget.ConstraintLayout>